--- a/index.html
+++ b/index.html
@@ -1,22 +1,34 @@
-<html>
+<html> <!-- keep! -->
 
 <head>
 <title>Alex's Manga</title>
 </head>
+<!-- browser header -->
+
+<!-- consider STYLE and CLASS -->
+
+
 
 <body>
+<!-- actual document -->
 
-<p>This is an R HTML document. When you click the <b>Knit HTML</b> button a web page will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:</p>
+<p>
+<!-- paragraph -->
+</p>
 
-<!--begin.rcode
-summary(cars)
-end.rcode-->
 
-<p>You can also embed plots, for example:</p>
+<br> 
+<!-- line break -->
 
-<!--begin.rcode fig.width=7, fig.height=6
-plot(cars)
-end.rcode-->
 
-</body>
-</html>
+<img src="img_girl.jpg" width="500" height="600" alt="">
+<!-- image with 3 parameters, no closing tag -->
+<!-- SRC = ADDRESS -->
+<!-- WIDTH and HEIGHT in pixels -->
+<!-- ALT specifies hover over text for image -->
+
+
+
+</body> <!-- keep! -->
+
+</html> <!-- keep! -->
