--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <!-- line break -->
 
 
-<img src="img_girl.jpg" width="500" height="600" alt="">
+<img src="PAGES\pageone.jpg" width="500" height="600" alt="">
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
 <!-- WIDTH and HEIGHT in pixels -->
