--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 <!-- line break -->
 
 
-<img src="PAGES\pageone.jpg" width="550" height="700" alt="1">
+<img src="PAGES\pageone.jpg" width="550" height="700" alt="Page 1">
+<img src="PAGES\pagetwo.jpg" width="550" height="700" alt="Page 2">
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
 <!-- WIDTH and HEIGHT in pixels -->
