--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 <br> 
 <!-- line break -->
 
+<margin style="margin:50px 100px;">
+  
+  
+  
+  
 
 <img src="PAGES\pageone.jpg" width="550" height="700" alt="Page 1">
 <br>
@@ -28,6 +33,11 @@
 <!-- SRC = ADDRESS -->
 <!-- WIDTH and HEIGHT in pixels -->
 <!-- ALT specifies hover over text for image -->
+
+</margin>
+
+
+
 
 
 
