--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
 
-<body>
+<body style="margin:50px 100px;">
 <!-- actual document -->
 
 <p>
@@ -20,7 +20,7 @@
 <br> 
 <!-- line break -->
 
-<margin style="margin:50px 100px;">
+
   
 
 <img src="PAGES\pageone.jpg" width="550" height="700" alt="Page 1">
@@ -31,7 +31,7 @@
 <!-- WIDTH and HEIGHT in pixels -->
 <!-- ALT specifies hover over text for image -->
 
-</margin>
+
 
 
 
