--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
   
 
-<img src="PAGES\pageone.jpg" width="550" height="700" alt="Page 1">
+<img src="PAGES\pageone.jpg" width="550" height="700" alt="Page One">
 <br>
-<img src="PAGES\pagetwo.jpg" width="550" height="700" alt="Page 2">
+<img src="PAGES\pagetwo.jpg" width="550" height="700" alt="Page Two">
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
 <!-- WIDTH and HEIGHT in pixels -->
