--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 <img src="PAGES\pageone.jpg" width="550" height="700" alt="Page One">
 <br>
 <img src="PAGES\pagetwo.jpg" width="550" height="700" alt="Page Two">
+<br>
+<img src="PAGES\pagethree.jpg" width="550" height="700" alt="Page Three">
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
 <!-- WIDTH and HEIGHT in pixels -->
