--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
   
 
-<img src="PAGES\pageone.jpg" width="550" height="700" alt="Page One">
+<img src="PAGES\page1.jpg" width="550" height="700" alt="Page One">
 <br>
-<img src="PAGES\pagetwo.jpg" width="550" height="700" alt="Page Two">
+<img src="PAGES\page2.jpg" width="550" height="700" alt="Page Two">
 <br>
-<img src="PAGES\pagethree.jpg" width="550" height="700" alt="Page Three">
+<img src="PAGES\page3.jpg" width="550" height="700" alt="Page Three">
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
 <!-- WIDTH and HEIGHT in pixels -->
