--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 <img src="PAGES\page2.jpg" width="550" height="700" alt="Page Two">
 <br>
 <img src="PAGES\page3.jpg" width="550" height="700" alt="Page Three">
+<br>
+<img src="PAGES\page4.jpg" width="550" height="700" alt="Page Four">
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
 <!-- WIDTH and HEIGHT in pixels -->
