--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 
 <head>
 <title>Alex's Manga</title>
+<style>
+.responsive {
+  width: 100%;
+  height: auto;
+}
+</style>
 </head>
 <!-- browser header -->
 
@@ -23,7 +29,8 @@
 
   
 
-<img src="PAGES\page1.jpg" width="550" height="700" alt="Page One">
+<img src="PAGES\page1.jpg" width="550" height="700" alt="Page One" 
+class="responsive">
 <br>
 <img src="PAGES\page2.jpg" width="550" height="700" alt="Page Two">
 <br>
