--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 
   
 
-<img src="PAGES\page1.jpg" width="550" height="700" alt="Page One" 
-class="responsive">
+<img src="PAGES\page1.jpg" alt="Page One" class="responsive">
 <br>
 <img src="PAGES\page2.jpg" width="550" height="700" alt="Page Two">
 <br>
