--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
 <img src="PAGES\page1.jpg" alt="Page One" class="responsive">
 <br>
-<img src="PAGES\page2.jpg" width="550" height="700" alt="Page Two">
+<img src="PAGES\page2.jpg" alt="Page Two" class="responsive">
 <br>
-<img src="PAGES\page3.jpg" width="550" height="700" alt="Page Three">
+<img src="PAGES\page3.jpg" alt="Page Three" class="responsive">
 <br>
-<img src="PAGES\page4.jpg" width="550" height="700" alt="Page Four">
+<img src="PAGES\page4.jpg" alt="Page Four" class="responsive">
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
 <!-- WIDTH and HEIGHT in pixels -->
