--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 <img src="PAGES\page3.jpg" alt="Page Three" class="responsive">
 <br>
 <img src="PAGES\page4.jpg" alt="Page Four" class="responsive">
+<br>
+<img src="PAGES\page5.jpg" alt="Page Five" class="responsive">
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
 <!-- WIDTH and HEIGHT in pixels -->
