--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 <img src="PAGES\page4.jpg" alt="Page Four" class="responsive">
 <br>
 <img src="PAGES\page5.jpg" alt="Page Five" class="responsive">
+<br>
+<img src="PAGES\page6.jpg" alt="Page Six" class="responsive">
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
 <!-- WIDTH and HEIGHT in pixels -->
