--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 <img src="PAGES\page5.jpg" alt="Page Five" class="responsive">
 <br>
 <img src="PAGES\page6.jpg" alt="Page Six" class="responsive">
+<br>
+<img src="PAGES\page7.jpg" alt="Page Seven" class="responsive">
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
 <!-- WIDTH and HEIGHT in pixels -->
