--- a/index.html
+++ b/index.html
@@ -51,13 +51,8 @@
 
 
 
-
-
-
-
-
 </body> <!-- keep! -->
 
 </html> <!-- keep! -->
 
-<!-- forced reload!!!!!!!! -->
+<!-- forced reload!!!!!!!!! -->
