--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 <img src="PAGES\page7.jpg" alt="Page Seven" class="responsive">
 <br>
 <img src="PAGES\page8.jpg" alt="Page Eight" class="responsive">
+<br>
+<img src="PAGES\page9.jpg" alt="Page Nine" class="responsive">
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
 <!-- WIDTH and HEIGHT in pixels -->
