--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 <img src="PAGES\page8.jpg" alt="Page Eight" class="responsive">
 <br>
 <img src="PAGES\page9.jpg" alt="Page Nine" class="responsive">
+<br>
+<img src="PAGES\page10.jpg" alt="Page Ten" class="responsive">
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
 <!-- WIDTH and HEIGHT in pixels -->
