--- a/index.html
+++ b/index.html
@@ -26,8 +26,17 @@
 <br> 
 <!-- line break -->
 
+<div id="loop">
+</div>
 
-  
+<script>
+int pages = 10;
+var x ="", i;
+for (i=1; i<=pages+1; i++) {
+  x = x + "<h" + i + ">Heading " + i + "</h" + i + ">";
+}
+document.getElementById("demo").innerHTML = x;
+</script>  
 
 <img src="PAGES\page01.jpg" alt="Page One" class="responsive">
 <br>
