--- a/index.html
+++ b/index.html
@@ -68,4 +68,4 @@ document.getElementById("demo").innerHTML = x;
 
 </html> <!-- keep! -->
 
-<!-- forced reload!!!!!!!! -->
+<!-- forced reload!!!!!!!!! -->
