--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ var x ="", i;
 for (i=1; i<=pages+1; i++) {
   x = x + "<h" + i + ">Heading " + i + "</h" + i + ">";
 }
-document.getElementById("demo").innerHTML = x;
+document.getElementById("loop").innerHTML = x;
 </script>  
 
 <img src="PAGES\page01.jpg" alt="Page One" class="responsive">
