--- a/index.html
+++ b/index.html
@@ -72,4 +72,4 @@ document.getElementById("loop").innerHTML = x;
 
 </html> <!-- keep! -->
 
-<!-- forced reload!!!!!!!!! -->
+<!-- forced reload!!!!!! -->
