--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 <img src="PAGES\page09.jpg" alt="Page Nine" class="responsive">
 <br>
 <img src="PAGES\page10.jpg" alt="Page Ten" class="responsive">
+<br>
+<img src="PAGES\page11.jpg" alt="Page Eleven" class="responsive">
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
 <!-- WIDTH and HEIGHT in pixels -->
