--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 <img src="PAGES\page10.jpg" alt="Page Ten" class="responsive">
 <br>
 <img src="PAGES\page11.jpg" alt="Page Eleven" class="responsive">
+<br>
+<img src="PAGES\page12.jpg" alt="Page Twelve" class="responsive">
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
 <!-- WIDTH and HEIGHT in pixels -->
