--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 <img src="PAGES\page11.jpg" alt="Page Eleven" class="responsive">
 <br>
 <img src="PAGES\page12.jpg" alt="Page Twelve" class="responsive">
+<br>
+<img src="PAGES\page13.jpg" alt="Page Thirteen" class="responsive">
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
 <!-- WIDTH and HEIGHT in pixels -->
