--- a/index.html
+++ b/index.html
@@ -50,10 +50,8 @@
 <!-- WIDTH and HEIGHT in pixels -->
 <!-- ALT specifies hover over text for image -->
 
-
-
 </body> <!-- keep! -->
 
 </html> <!-- keep! -->
 
-<!-- forced reload!!!! -->
+<!-- forced reload!!!!!!!! -->
