--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 <img src="PAGES\page12.jpg" alt="Page Twelve" class="responsive">
 <br>
 <img src="PAGES\page13.jpg" alt="Page Thirteen" class="responsive">
+<br>
+<img src="PAGES\page14.jpg" alt="Page Fourteen" class="responsive">
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
 <!-- WIDTH and HEIGHT in pixels -->
