--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 <img src="PAGES\page13.jpg" alt="Page Thirteen" class="responsive">
 <br>
 <img src="PAGES\page14.jpg" alt="Page Fourteen" class="responsive">
+<br>
+<img src="PAGES\page15.jpg" alt="Page Fifteen" class="responsive">
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
 <!-- WIDTH and HEIGHT in pixels -->
