--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 <img src="PAGES\page14.jpg" alt="Page Fourteen" class="responsive">
 <br>
 <img src="PAGES\page15.jpg" alt="Page Fifteen" class="responsive">
+<br>
+<img src="PAGES\page16.jpg" alt="Page Sixteen" class="responsive">
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
 <!-- WIDTH and HEIGHT in pixels -->
