--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 <img src="PAGES\page15.jpg" alt="Page Fifteen" class="responsive">
 <br>
 <img src="PAGES\page16.jpg" alt="Page Sixteen" class="responsive">
+<br>
+<img src="PAGES\page17.jpg" alt="Page Seventeen" class="responsive">
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
 <!-- WIDTH and HEIGHT in pixels -->
