--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 <img src="PAGES\page17.jpg" alt="Page Seventeen" class="responsive">
 <br>
 <img src="PAGES\page18.jpg" alt="Page Eighteen" class="responsive">
+<br>
+<img src="PAGES\page19.jpg" alt="Page Nineteen" class="responsive">
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
