--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 <img src="PAGES\page18.jpg" alt="Page Eighteen" class="responsive">
 <br>
 <img src="PAGES\page19.jpg" alt="Page Nineteen" class="responsive">
+<br>
+<img src="PAGES\page20.jpg" alt="Page Twenty" class="responsive">
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
