--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 <img src="PAGES\page19.jpg" alt="Page Nineteen" class="responsive">
 <br>
 <img src="PAGES\page20.jpg" alt="Page Twenty" class="responsive">
+<br>
+<img src="PAGES\page21.jpg" alt="Page Twenty One" class="responsive">
 
 
 <!-- image with 3 parameters, no closing tag -->
