--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 <img src="PAGES\page20.jpg" alt="Page Twenty" class="responsive">
 <br>
 <img src="PAGES\page21.jpg" alt="Page Twenty One" class="responsive">
-
+<br>
+<img src="PAGES\page22.jpg" alt="Page Twenty Two" class="responsive">
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
