--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
 <img src="PAGES\page021.jpg" alt="Page Twenty One" class="responsive">
 <br>
 <img src="PAGES\page022.jpg" alt="Page Twenty Two" class="responsive">
-\<br>
+<br>
 <img src="PAGES\page023.jpg" alt="Page Twenty Three" class="responsive">
+<br>
+<img src="PAGES\page024.jpg" alt="Page Twenty Four" class="responsive">
 
 
 <!-- image with 3 parameters, no closing tag -->
