--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
 <img src="PAGES\page023.jpg" alt="Page Twenty Three" class="responsive">
 <br>
 <img src="PAGES\page024.jpg" alt="Page Twenty Four" class="responsive">
+<br>
+<img src="PAGES\page025.jpg" alt="Page Twenty Five" class="responsive">
 
 
 <!-- image with 3 parameters, no closing tag -->
