--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
 <img src="PAGES\page024.jpg" alt="Page Twenty Four" class="responsive">
 <br>
 <img src="PAGES\page025.jpg" alt="Page Twenty Five" class="responsive">
+<br>
+<img src="PAGES\page026.jpg" alt="Page Twenty Six" class="responsive">
 
 
 <!-- image with 3 parameters, no closing tag -->
