--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
 <p>25</p><br>
 <img src="PAGES\page026.jpg" alt="Page Twenty Six" class="responsive">
 <p>26</p><br>
+<img src="PAGES\page027.jpg" alt="Page Twenty Seven" class="responsive">
+<p>27</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
