--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
 <p>26</p><br>
 <img src="PAGES\page027.jpg" alt="Page Twenty Seven" class="responsive">
 <p>27</p><br>
+<img src="PAGES\page028.jpg" alt="Page Twenty Eight" class="responsive">
+<p>28</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
