--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 <p>27</p><br>
 <img src="PAGES\page028.jpg" alt="Page Twenty Eight" class="responsive">
 <p>28</p><br>
+<img src="PAGES\page029.jpg" alt="Page Twenty Nine" class="responsive">
+<p>29</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
