--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
 <p>28</p><br>
 <img src="PAGES\page029.jpg" alt="Page Twenty Nine" class="responsive">
 <p>29</p><br>
+<img src="PAGES\page030.jpg" alt="Page Thirty" class="responsive">
+<p>30</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
