--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html> <!-- keep! -->
 
 <head>
-<title>Alex's Manga</title>
+<title>The Arctic Seal</title>
+<link rel="shortcut icon" type="image/jpg" href="PAGES\favicon.jpg"/>
 <style>
 .responsive {
   width: 100%;
