--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
 <p>29</p><br>
 <img src="PAGES\page030.jpg" alt="Page Thirty" class="responsive">
 <p>30</p><br>
+<img src="PAGES\page031.jpg" alt="Page Thirty One" class="responsive">
+<p>31</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
