--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
 <p>30</p><br>
 <img src="PAGES\page031.jpg" alt="Page Thirty One" class="responsive">
 <p>31</p><br>
+<img src="PAGES\page032.jpg" alt="Page Thirty Two" class="responsive">
+<p>32</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
