--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
 <p>31</p><br>
 <img src="PAGES\page032.jpg" alt="Page Thirty Two" class="responsive">
 <p>32</p><br>
+<img src="PAGES\page033.jpg" alt="Page Thirty Three" class="responsive">
+<p>33</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
