--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
 <p>32</p><br>
 <img src="PAGES\page033.jpg" alt="Page Thirty Three" class="responsive">
 <p>33</p><br>
+<img src="PAGES\page034.jpg" alt="Page Thirty Four" class="responsive">
+<p>34</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
