--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
 <p>33</p><br>
 <img src="PAGES\page034.jpg" alt="Page Thirty Four" class="responsive">
 <p>34</p><br>
+<img src="PAGES\page035.jpg" alt="Page Thirty Five" class="responsive">
+<p>35</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
