--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   width: 100%;
   height: auto;
 }
+
 </style>
 </head>
 <!-- browser header -->
@@ -16,7 +17,7 @@
 
 <body style="margin:50px 100px;">
 <!-- actual document -->
-
+<font size=20>
 
 <img src="PAGES\page001.jpg" alt="Page One" class="responsive">
 <p>1</p><br>
