--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body style="margin:50px 100px;">
 <!-- actual document -->
-<font size=20>
+<p style="font-size:30px">
 
 <img src="PAGES\page001.jpg" alt="Page One" class="responsive">
 <p>1</p><br>
