--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body style="margin:50px 100px;">
 <!-- actual document -->
 <p style="font-size:30px">
+<p style="font-family:verdana">
 
 <img src="PAGES\page001.jpg" alt="Page One" class="responsive">
 <p>1</p><br>
