--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body style="margin:50px 100px;">
 <!-- actual document -->
-<p style="font-size:30px">
+<p style="font-size:30px;">
 <p style="font-family:verdana">
 
 <img src="PAGES\page001.jpg" alt="Page One" class="responsive">
