--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   width: 100%;
   height: auto;
 }
-
+p {font-size:25px;}
 </style>
 </head>
 <!-- browser header -->
@@ -17,8 +17,6 @@
 
 <body style="margin:50px 100px;">
 <!-- actual document -->
-<p style="font-family:verdana">
-<p style="font-size:30px;">
 
 
 <img src="PAGES\page001.jpg" alt="Page One" class="responsive">
