--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@ p {font-size:30px;}
 <p>34</p><br>
 <img src="PAGES\page035.jpg" alt="Page Thirty Five" class="responsive">
 <p>35</p><br>
+<img src="PAGES\page036.jpg" alt="Page Thirty Six" class="responsive">
+<p>36</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
