--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@ p {font-size:30px;}
 <p>35</p><br>
 <img src="PAGES\page036.jpg" alt="Page Thirty Six" class="responsive">
 <p>36</p><br>
+<img src="PAGES\page037.jpg" alt="Page Thirty Seven" class="responsive">
+<p>37</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
