--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@ p {font-size:30px;}
 <p>36</p><br>
 <img src="PAGES\page037.jpg" alt="Page Thirty Seven" class="responsive">
 <p>37</p><br>
+<img src="PAGES\page038.jpg" alt="Page Thirty Eight" class="responsive">
+<p>38</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
