--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@ p {font-size:30px;}
 <p>37</p><br>
 <img src="PAGES\page038.jpg" alt="Page Thirty Eight" class="responsive">
 <p>38</p><br>
+<img src="PAGES\page039.jpg" alt="Page Thirty Nine" class="responsive">
+<p>39</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
