--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@ p {font-size:30px;}
 <p>38</p><br>
 <img src="PAGES\page039.jpg" alt="Page Thirty Nine" class="responsive">
 <p>39</p><br>
+<img src="PAGES\page040.jpg" alt="Page Fourty" class="responsive">
+<p>40</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
