--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@ p {font-size:30px;}
 <p>39</p><br>
 <img src="PAGES\page040.jpg" alt="Page Fourty" class="responsive">
 <p>40</p><br>
+<img src="PAGES\page041.jpg" alt="Page Fourty One" class="responsive">
+<p>41</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
