--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@ p {font-size:30px;}
 <img src="PAGES\page040.jpg" alt="Page Fourty" class="responsive">
 <p>40</p><br>
 <img src="PAGES\page041.jpg" alt="Page Fourty One" class="responsive">
-<p>41</p><br>
+<p>41</p><br>]
+<img src="PAGES\page042.jpg" alt="Page Fourty Two" class="responsive">
+<p>42</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
