--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@ p {font-size:30px;}
 <p>41</p><br>
 <img src="PAGES\page042.jpg" alt="Page Fourty Two" class="responsive">
 <p>42</p><br>
+<img src="PAGES\page043.jpg" alt="Page Fourty Three" class="responsive">
+<p>43</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
