--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@ p {font-size:30px;}
 <p>42</p><br>
 <img src="PAGES\page043.jpg" alt="Page Fourty Three" class="responsive">
 <p>43</p><br>
+<img src="PAGES\page044.jpg" alt="Page Fourty Four" class="responsive">
+<p>44</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
