--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@ p {font-size:30px;}
 <p>44</p><br>
 <img src="PAGES\page045.jpg" alt="Page Fourty Five" class="responsive">
 <p>45</p><br>
+<img src="PAGES\page046.jpg" alt="Page Fourty Six" class="responsive">
+<p>46</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
