--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@ p {font-size:30px;}
 <body style="margin:50px 100px;">
 <!-- actual document -->
 
-
+<img src="PAGES\page000.jpg" alt="Page Zero" class="responsive">
+<p>0</p><br>
+<img src="PAGES\title.jpg" alt="Title" class="responsive">
+<p> </p><br>
 <img src="PAGES\page001.jpg" alt="Page One" class="responsive">
 <p>1</p><br>
 <img src="PAGES\page002.jpg" alt="Page Two" class="responsive">
@@ -107,10 +110,7 @@ p {font-size:30px;}
 <p>43</p><br>
 <img src="PAGES\page044.jpg" alt="Page Fourty Four" class="responsive">
 <p>44</p><br>
-<img src="PAGES\page045.jpg" alt="Page Fourty Five" class="responsive">
-<p>45</p><br>
-<img src="PAGES\page046.jpg" alt="Page Fourty Six" class="responsive">
-<p>46</p><br>
+
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
