--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ p {font-size:30px;}
 
 <img src="PAGES\page000.jpg" alt="Page Zero" class="responsive">
 <p>0</p><br>
-<img src="PAGES\title.jpg" alt="Title" class="responsive">
+<img src="PAGES\chapter01.jpg" alt="Title" class="responsive">
 <p> </p><br>
 <img src="PAGES\page001.jpg" alt="Page One" class="responsive">
 <p>1</p><br>
