--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@ p {font-size:30px;}
 <p>43</p><br>
 <img src="PAGES\page044.jpg" alt="Page Fourty Four" class="responsive">
 <p>44</p><br>
+<img src="PAGES\page045.jpg" alt="Page Fourty Five" class="responsive">
+<p>45</p><br>
 
 
 <!-- image with 3 parameters, no closing tag -->
