--- a/index.html
+++ b/index.html
@@ -112,6 +112,10 @@ p {font-size:30px;}
 <p>44</p><br>
 <img src="PAGES\page045.jpg" alt="Page Fourty Five" class="responsive">
 <p>45</p><br>
+<img src="PAGES\page046.jpg" alt="Page Fourty Six" class="responsive">
+<p>46</p><br>
+<img src="PAGES\page047.jpg" alt="Page Fourty Seven" class="responsive">
+<p>47</p><br>
 
 
 <!-- image with 3 parameters, no closing tag -->
