--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@ p {font-size:30px;}
 <p>46</p><br>
 <img src="PAGES\page047.jpg" alt="Page Fourty Seven" class="responsive">
 <p>47</p><br>
+<img src="PAGES\page048.jpg" alt="Page Fourty Eight" class="responsive">
+<p>48</p><br>
 
 
 <!-- image with 3 parameters, no closing tag -->
