--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@ p {font-size:30px;}
 <p>47</p><br>
 <img src="PAGES\page048.jpg" alt="Page Fourty Eight" class="responsive">
 <p>48</p><br>
-
+<img src="PAGES\page049.jpg" alt="Page Fourty Nine" class="responsive">
+<p>49</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
