--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@ p {font-size:30px;}
 <p>48</p><br>
 <img src="PAGES\page049.jpg" alt="Page Fourty Nine" class="responsive">
 <p>49</p><br>
+<img src="PAGES\page050.jpg" alt="Page Fifty" class="responsive">
+<p>50</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
