--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@ p {font-size:30px;}
 <p>49</p><br>
 <img src="PAGES\page050.jpg" alt="Page Fifty" class="responsive">
 <p>50</p><br>
+<img src="PAGES\page051.jpg" alt="Page Fifty One" class="responsive">
+<p>51</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
