--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@ p {font-size:30px;}
 <p>50</p><br>
 <img src="PAGES\page051.jpg" alt="Page Fifty One" class="responsive">
 <p>51</p><br>
+<img src="PAGES\page052.jpg" alt="Page Fifty Two" class="responsive">
+<p>52</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
