--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@ p {font-size:30px;}
 <p>51</p><br>
 <img src="PAGES\page052.jpg" alt="Page Fifty Two" class="responsive">
 <p>52</p><br>
+<img src="PAGES\page053.jpg" alt="Page Fifty THree" class="responsive">
+<p>53</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
