--- a/index.html
+++ b/index.html
@@ -126,8 +126,10 @@ p {font-size:30px;}
 <p>51</p><br>
 <img src="PAGES\page052.jpg" alt="Page Fifty Two" class="responsive">
 <p>52</p><br>
-<img src="PAGES\page053.jpg" alt="Page Fifty THree" class="responsive">
+<img src="PAGES\page053.jpg" alt="Page Fifty Three" class="responsive">
 <p>53</p><br>
+<img src="PAGES\page054.jpg" alt="Page Fifty Four" class="responsive">
+<p>54</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
