--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@ p {font-size:30px;}
 <p>53</p><br>
 <img src="PAGES\page054.jpg" alt="Page Fifty Four" class="responsive">
 <p>54</p><br>
+<img src="PAGES\page055.jpg" alt="Page Fifty Five" class="responsive">
+<p>55</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
