--- a/index.html
+++ b/index.html
@@ -132,6 +132,8 @@ p {font-size:30px;}
 <p>54</p><br>
 <img src="PAGES\page055.jpg" alt="Page Fifty Five" class="responsive">
 <p>55</p><br>
+<img src="PAGES\page056.jpg" alt="Page Fifty Six" class="responsive">
+<p>56</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
