--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@ p {font-size:30px;}
 <p>55</p><br>
 <img src="PAGES\page056.jpg" alt="Page Fifty Six" class="responsive">
 <p>56</p><br>
+<img src="PAGES\page057.jpg" alt="Page Fifty Seven" class="responsive">
+<p>57</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
