--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@ p {font-size:30px;}
 <p>56</p><br>
 <img src="PAGES\page057.jpg" alt="Page Fifty Seven" class="responsive">
 <p>57</p><br>
+<img src="PAGES\page058.jpg" alt="Page Fifty Eight" class="responsive">
+<p>58</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
