--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@ p {font-size:30px;}
 <p>57</p><br>
 <img src="PAGES\page058.jpg" alt="Page Fifty Eight" class="responsive">
 <p>58</p><br>
+<img src="PAGES\page059.jpg" alt="Page Fifty Nine" class="responsive">
+<p>59</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
