--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@ p {font-size:30px;}
 <p>58</p><br>
 <img src="PAGES\page059.jpg" alt="Page Fifty Nine" class="responsive">
 <p>59</p><br>
+<img src="PAGES\page060.jpg" alt="Page Sixty" class="responsive">
+<p>60</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
