--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@ p {font-size:30px;}
 <p>59</p><br>
 <img src="PAGES\page060.jpg" alt="Page Sixty" class="responsive">
 <p>60</p><br>
+<img src="PAGES\page061.jpg" alt="Page Sixty One" class="responsive">
+<p>61</p><br>
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
