--- a/index.html
+++ b/index.html
@@ -144,6 +144,8 @@ p {font-size:30px;}
 <p>60</p><br>
 <img src="PAGES\page061.jpg" alt="Page Sixty One" class="responsive">
 <p>61</p><br>
+<img src="PAGES\nextchapter.jpg" alt="Next Chapter" class="responsive">
+
 
 <!-- image with 3 parameters, no closing tag -->
 <!-- SRC = ADDRESS -->
