--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@ p {font-size:30px;}
 <body style="margin:50px 100px;">
 <!-- actual document -->
 
-<img src="PAGES\page000.jpg" alt="Page Zero" class="responsive">
-<p>0</p><br>
-<img src="PAGES\chapter01.jpg" alt="Title" class="responsive">
+
+<img src="PAGES\chapter01.jpg" alt="Chapter One" class="responsive">
 <p> </p><br>
 <img src="PAGES\page001.jpg" alt="Page One" class="responsive">
 <p>1</p><br>
@@ -143,6 +142,9 @@ p {font-size:30px;}
 <img src="PAGES\page060.jpg" alt="Page Sixty" class="responsive">
 <p>60</p><br>
 <img src="PAGES\page061.jpg" alt="Page Sixty One" class="responsive">
+<p>61</p><br>
+<img src="PAGES\chapter02.jpg" alt="Chapter Two" class="responsive">
+<p> </p><br>
 
 
 
