--- a/index.html
+++ b/index.html
@@ -143,6 +143,14 @@ p {font-size:30px;}
 <p>60</p><br>
 <img src="PAGES\page061.jpg" alt="Page Sixty One" class="responsive">
 <p>61</p><br>
+<img src="PAGES\chapter02.jpg" alt="Chapter Two" class="responsive">
+<p> </p><br>
+<img src="PAGES\page062.jpg" alt="Page Sixty Two" class="responsive">
+<p>62</p><br>
+<img src="PAGES\page063.jpg" alt="Page Sixty Three" class="responsive">
+<p>63</p><br>
+<img src="PAGES\page064.jpg" alt="Page Sixty Four" class="responsive">
+<p>64</p><br>
 
 
 
