--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@ p {font-size:30px;}
 <p>63</p><br>
 <img src="PAGES\page064.jpg" alt="Page Sixty Four" class="responsive">
 <p>64</p><br>
+<img src="PAGES\page065.jpg" alt="Page Sixty Five" class="responsive">
+<p>65</p><br>
 
 
 
