--- a/index.html
+++ b/index.html
@@ -153,6 +153,8 @@ p {font-size:30px;}
 <p>64</p><br>
 <img src="PAGES\page065.jpg" alt="Page Sixty Five" class="responsive">
 <p>65</p><br>
+<img src="PAGES\page066.jpg" alt="Page Sixty Six" class="responsive">
+<p>66</p><br>
 
 
 
