--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@ p {font-size:30px;}
 <p>65</p><br>
 <img src="PAGES\page066.jpg" alt="Page Sixty Six" class="responsive">
 <p>66</p><br>
+<img src="PAGES\page067.jpg" alt="Page Sixty Seven" class="responsive">
+<p>67</p><br>
 
 
 
