--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   height: auto;
 }
 p {font-size:30px;}
+.whiteDiv {
+  background-color:rgb(255,255,255);
+}
+.greyDiv {
+  background-color:rgb(124,124,124);
+}
 </style>
 </head>
 <!-- browser header -->
@@ -18,7 +24,7 @@ p {font-size:30px;}
 <body style="margin:50px 100px;">
 <!-- actual document -->
 
-
+<div class="whiteDiv">
 <img src="PAGES\chapter01.jpg" alt="Chapter One" class="responsive">
 <p> </p><br>
 <img src="PAGES\page001.jpg" alt="Page One" class="responsive">
@@ -143,6 +149,9 @@ p {font-size:30px;}
 <p>60</p><br>
 <img src="PAGES\page061.jpg" alt="Page Sixty One" class="responsive">
 <p>61</p><br>
+</div>
+
+<div class="greyDiv">
 <img src="PAGES\chapter02.jpg" alt="Chapter Two" class="responsive">
 <p> </p><br>
 <img src="PAGES\page062.jpg" alt="Page Sixty Two" class="responsive">
@@ -157,7 +166,7 @@ p {font-size:30px;}
 <p>66</p><br>
 <img src="PAGES\page067.jpg" alt="Page Sixty Seven" class="responsive">
 <p>67</p><br>
-
+</div>
 
 
 
