--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ p {font-size:30px;}
 
 <!-- consider STYLE and CLASS -->
 
-<body style="margin:50px 100px;">
+<body>
 <!-- actual document -->
 
 <div class="whiteDiv">
