--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <title>The Arctic Seal</title>
 <link rel="shortcut icon" type="image/jpg" href="PAGES\favicon.jpg"/>
 <style>
-
+.responsive {
+  width: 100%;
+  height: auto;
+}
 p {font-size:30px;}
 .whiteDiv {
   background-color:rgb(255,255,255);
