--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 p {font-size:30px;}
 .whiteDiv {
   background-color:rgb(255,255,255);
+  margin:50px;
 }
 .greyDiv {
   background-color:rgb(124,124,124);
+  margin:50px;
 }
 </style>
 </head>
