--- a/index.html
+++ b/index.html
@@ -168,6 +168,10 @@ p {font-size:30px;}
 <p>66</p><br>
 <img src="PAGES\page067.jpg" alt="Page Sixty Seven" class="responsive">
 <p>67</p><br>
+<img src="PAGES\page068.jpg" alt="Page Sixty Eight" class="responsive">
+<p>68</p><br>
+<img src="PAGES\page069.jpg" alt="Page Sixty Nine" class="responsive">
+<p>69</p><br>
 </div>
 
 
