--- a/index.html
+++ b/index.html
@@ -172,6 +172,8 @@ p {font-size:30px;}
 <p>68</p><br>
 <img src="PAGES\page069.jpg" alt="Page Sixty Nine" class="responsive">
 <p>69</p><br>
+<img src="PAGES\page070.jpg" alt="Page Seventy" class="responsive">
+<p>70</p><br>
 </div>
 
 
