--- a/index.html
+++ b/index.html
@@ -174,6 +174,8 @@ p {font-size:30px;}
 <p>69</p><br>
 <img src="PAGES\page070.jpg" alt="Page Seventy" class="responsive">
 <p>70</p><br>
+<img src="PAGES\page071.jpg" alt="Page Seventy One" class="responsive">
+<p>71</p><br>
 </div>
 
 
