--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@ p {font-size:30px;}
 <p>70</p><br>
 <img src="PAGES\page071.jpg" alt="Page Seventy One" class="responsive">
 <p>71</p><br>
+<img src="PAGES\page072.jpg" alt="Page Seventy Two" class="responsive">
+<p>72</p><br>
 </div>
 
 
